Fixed select option css on safari

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9966,3 +9966,12 @@ line-item .line-item__info .list-disc .text-subdued{
   background-color: #fff;
   background-color: var(--colorSmallImageBg);
 }
+.xs-drawer .xs-v-selection select.form-control {
+  -webkit-appearance: none;
+  background-position: right 50%;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    padding: .5em;
+    padding-right: 1.5em;
+    background-size: 20px;
+}
